<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saurabh.saurabh.MainActivity">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.AppBarLayout
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </android.support.design.widget.AppBarLayout>
    <ImageView
        android:id="@+id/food_image"
        android:scaleType="centerCrop"
        tools:src="@drawable/food"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageButton
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:srcCompat="@drawable/camera"
        android:id="@+id/upload_button"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="@+id/food_image"
        app:layout_constraintLeft_toLeftOf="@+id/food_image"
        app:layout_constraintRight_toRightOf="@+id/food_image"
        app:layout_constraintBottom_toBottomOf="@+id/food_image"
        android:background="@android:color/transparent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/food_image"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:id="@+id/textInputLayout2">

        <EditText
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/recipe_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_type" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:minHeight="36dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/cust_button_text_color"
        android:text="@string/beginner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beginner"
        android:textAllCaps="false"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:minHeight="36dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/cust_button_text_color"
        android:text="@string/sous_chef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sous"
        android:textAllCaps="false"
        app:layout_constraintRight_toLeftOf="@+id/master"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/beginner"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/beginner" />

    <Button
        android:minHeight="36dp"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        android:textColor="@color/cust_button_text_color"
        android:text="@string/master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/master"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
<com.joanzapata.iconify.widget.IconTextView
    android:layout_width="wrap_content"
    android:text="@string/fa_users"
    android:textSize="20sp"
    android:textColor="#000"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="32dp"
    android:id="@+id/iconTextView"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/beginner"
    app:layout_constraintBottom_toBottomOf="@+id/serves" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serves"
        app:layout_constraintLeft_toRightOf="@+id/iconTextView"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/beginner" />

    <com.joanzapata.iconify.widget.IconTextView
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/fa_clock_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:id="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sous"
        app:layout_constraintBottom_toBottomOf="@+id/serves"
        app:layout_constraintLeft_toRightOf="@+id/sous"
        app:layout_constraintRight_toLeftOf="@+id/master"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:text="@string/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/duration"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/textInputLayout3">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
</ScrollView>
